Refacto méthode enregistrementUtilisateur + ajout du rôle à l'inscription