@@ -1,7 +1,6 @@
 package fr.diginamic.qualitair.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -24,7 +23,7 @@ public class FilDiscussionController {
 	  * */
 	@GetMapping("discussions")
 	public List<FilDiscussionDto> listAll(){
-		return this.discussionService.findAll().stream().map(FilDiscussionDto::from).collect(Collectors.toList());
+		return this.discussionService.findAll().stream().map(FilDiscussionDto::from).toList();
 	}
 	
 }
